# Pickfair

./: .bandit  .coveragerc  .editorconfig  .gitignore  .ruff.toml  AVVIA.bat  CONTRIBUTING.md  Makefile  Pickfair.spec  README.md  README.txt  audit_trigger.txt  auto_throttle.py  auto_updater.py  automation_engine.py  automation_optimizer.py  betfair_client.py  build.bat  build.py  circuit_breaker.py  database.py  devops_update.txt  dutching.py  dutching_cache.py  dutching_state.py  dutching_ui.py  event_bus.py  executor_manager.py  goal_engine_pro.py  main.py  market_tracker.py  market_validator.py  mypy.ini  order_manager.py  plugin_manager.py  plugin_runner.py  pnl_cache.py  pnl_engine.py  pyproject.toml  pytest.ini  (+18 more)
ai/: ai_guardrail.py  ai_pattern_engine.py  wom_engine.py
app_modules/: betting_module.py  monitoring_module.py  simulation_module.py  streaming_module.py  telegram_module.py  ui_module.py
controllers/: __init__.py  dutching_controller.py  telegram_controller.py
core/: async_db_writer.py  event_bus.py  fast_analytics.py  market_tracker.py  perf_counters.py  risk_middleware.py  safety_layer.py  tick_ring_buffer.py  trading_engine.py
devops_engine_test/: test_engine.txt
docs/: AI_RULEBOOK.md  ARCHITECTURE.md  FAILURE_MODES.md  PAYLOAD_CONTRACTS.md  PERFORMANCE_TARGETS.md  REPO_RADIOGRAPHY.md  TESTING_STRATEGY.md
guardrails/: __init__.py  allowed_dependencies.json  allowed_files.json  allowed_scope_files.json  critical_modules.json  guard_config.json  guard_probes.py  public_api_snapshot.json  runtime_smoke_specs.json  semantic_specs.json
scripts/: check_architecture_rules.py  check_contract_snapshots.py  extract_failure_context.py  find_shallow_tests.py  generate_fix_backlog.py  generate_fix_from_logs.py  list_top_shallow_tests.py  prioritize_test_cleanup.py  repo_api_report_v4.py  run_targeted_tests.py
tests/: test_ai_guardrail.py  (+175 more)
(+77 files in other folders)
