[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickfair"
version = "3.19.1"
description = "Pickfair Trading Bot"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
# Aggiungi qui tutte le cartelle del tuo progetto
include = ["ai*", "controllers*", "plugins*"] 

[tool.pytest.ini_options]
# Diciamo a Pytest di aggiungere automaticamente la root al PYTHONPATH
pythonpath = [
  "."
]
testpaths = [
    "tests",
]
