[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickfair"
version = "3.19.1"
description = "Pickfair Trading Bot"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "controllers*", "plugins*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
fix = true
target-version = "py311"

select = ["E", "F", "I"]
